test/syc/bad/unsignedvoid.c
/*
 * Both unsigned and void specifier
 */

unsigned void *a;
